# exex-templates

./: .gitignore  Cargo.toml  README.md  bq-config.json
templates/exex-avs-operator/: Cargo.toml
templates/exex-avs-operator/src/: lib.rs
templates/exex-wvm-bigquery/: Cargo.toml  README.md
templates/exex-wvm-bigquery/src/: lib.rs  repository.rs  types.rs
templates/exex-wvm-da/: Cargo.toml
templates/exex-wvm-da/src/: lib.rs  utils.rs
