[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
repository = "https://github.com/weaveVM/exex-templates"


[workspace]
members = [
    "templates/exex-wvm-bigquery",
    "templates/exex-avs-operator"
]

[workspace.dependencies]
brotlic = "0.8.2"
async-trait = "0.1.82"
eyre = "0.6"
wvm-archiver = { git = "https://github.com/weaveVM/wvm-archiver", branch = "main" }
tokio = { version = "1.39", default-features = false }
borsh = "1.5.1"
serde = "1.0.210"
serde_json = "1.0.128"
reth = { git = "https://github.com/weaveVM/wvm-reth", branch = "dev" }
reth-exex = { git = "https://github.com/weaveVM/wvm-reth", branch = "dev" }
wvm-borsh = { git = "https://github.com/weaveVM/wvm-reth", branch = "dev" }