[package]
name = "exex-wvm-da"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
resolver = "2"

[dependencies]
async-trait.workspace = true
eyre.workspace = true
wvm-archiver.workspace = true
borsh.workspace = true
brotlic.workspace = true

[dev-dependencies]
reth-exex-test-utils = { git = "https://github.com/weaveVM/wvm-reth", branch = "dev" }
tokio.workspace = true
reth = { git = "https://github.com/weaveVM/wvm-reth", branch = "dev" }
reth-exex = { git = "https://github.com/weaveVM/wvm-reth", branch = "dev" }
wvm-borsh = { git = "https://github.com/weaveVM/wvm-reth", branch = "dev" }

[profile.dind]
inherits = "dev"

[profile.no-debug-assertions]
inherits = "dev"
debug-assertions = false

[profile.release]
lto = true

[env]
RUST_BACKTRACE = "1"
